--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -8,5 +8,5 @@
     <%= f.submit 'Update Book' %>
     </p>
     <% end %>
-    <a href="#">Show</a>
-    <a href="#">Back</a>
+    <%= link_to "Show", book_path(@book) %>
+    <%= link_to "Back", books_path %>
