--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,26 +1,41 @@
 <h1>Books</h1>
 
 <main>
-  <div class="title">
-    <h3>title</h3>
-      <% @books.each do |book| %>
-        <p><%= book.title %></p>
-      <% end %>
-  </div>
+  <table>
 
-  <div class="body">
+    <thead>
+      <th>Title</th>
+      <th>Body</th>
+      <th colspan="3"></th>
+    </thead>
+    <tbody>
+      <% @books.each do |book| %>
+      <td><%= book.title %></td>
+      <td><%= book.body %></td>
+      <td>
+        <%= link_to "Show", book %>
+      </td>
+      <td>
+        <%= link_to "Edit", edit_book_path(book.id) %>
+      </td>
+      <td>
+        <%= link_to "Destroy", book, method: :delete, "data-confirm" => "Are you sure?" %>
+      </td>
+    </tbody>
+    <% end %>
+  </table>
+
+  <div class="new-article">
+    <h2>New book</h2>
+    <%= form_with model:@book, local:true do |f| %>
+    <h3>Title</h3>
+    <%= f.text_field :title %>
     <h3>Body</h3>
-      <% @books.each do |book| %>
-        <p><%= book.body %></p>
-      <% end %>
+    <%= f.text_area :body %>
+    <p>
+    <%= f.submit 'Create Book' %>
+    </p>
+    <% end %>
   </div>
-
-  <section class="command">
-    <span>
-      <!--ここにShowとEditとDestroy（HTTPメソッドのdeleteも）入れる-->
-    </span>
-  </section>
-
-<!--ここにnewページいれたい-->
 
 </main>
