--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,11 +1,15 @@
-<h1>Books</h1>
+<% if flash[:notice] %>
+<div class="flash">
+<%=flash[:notice] %>
+</div>
+<% end %>
 
-<main>
-  <table>
-
+<body>
+    <h1>Books</h1>
+    <table>
     <thead>
-      <th>Title</th>
-      <th>Body</th>
+      <th>本のタイトル</th>
+      <th>感想</th>
       <th colspan="3"></th>
     </thead>
     <tbody>
@@ -28,14 +32,14 @@
   <div class="new-article">
     <h2>New book</h2>
     <%= form_with model:@book, local:true do |f| %>
-    <h3>Title</h3>
+    <%= render 'layouts/error_messages', book: f.object %>
+    <div class=text-box-title>本のタイトル</div>
     <%= f.text_field :title %>
-    <h3>Body</h3>
+    <div class=text-box-body>感想</div>
     <%= f.text_area :body %>
     <p>
     <%= f.submit 'Create Book' %>
     </p>
     <% end %>
   </div>
-
-</main>
+</body>
