--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -13,7 +13,7 @@
       <th colspan="3"></th>
     </thead>
     <tbody>
-      <% @books.each do |book| %>
+      <!--<% @books.each do |book| %>-->
       <td><%= book.title %></td>
       <td><%= book.body %></td>
       <td>
@@ -26,7 +26,7 @@
         <%= link_to "Destroy", book, method: :delete, "data-confirm" => "Are you sure?" %>
       </td>
     </tbody>
-    <% end %>
+    <!--<% end %>-->
   </table>
 
   <div class="new-article">
